# krkr2

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  build.gradle  gradle.properties  local.properties  settings.gradle  vcpkg-configuration.json  vcpkg.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: AndroidManifest.xml  build.gradle
android/app/cpp/: krkr2_android.cpp
android/assets/locale/: en_us.xml  ja_jp.xml  zh_cn.xml  zh_tw.xml
android/libcocos2dx/: build.gradle
android/libcocos2dx-3.11.1/: build.gradle
android/libcocos2dx-3.6/: build.gradle
cmake/: Utils.cmake
cpp/: krkr2_android.cpp
cpp/core/: CMakeLists.txt
cpp/core/base/: 7zArchive.cpp  CharacterSet.cpp  MsgIntf.cpp  ScriptMgnIntf.cpp  SysInitIntf.cpp  UtilStreams.cpp  ZIPArchive.cpp
cpp/core/environ/: Application.cpp  DumpSend.cpp  Platform.h  XP3ArchiveRepack.h
cpp/core/plugin/: PluginImpl.cpp
cpp/core/sound/: FFWaveDecoder.cpp  MathAlgorithms.cpp  MathAlgorithms.h  VorbisWaveDecoder.cpp  WaveFormatConverter.cpp  xmmlib.h
cpp/core/tjs2/: tjsConfig.cpp  tjsInterCodeExec.cpp  tjsInterCodeExec.h  tjsInterCodeGen.cpp  tjsInterface.h  tjsNative.h  tjsObject.cpp  tjsObject.h  tjsObjectExtendable.cpp  tjsScriptCache.cpp  tjsUtils.h
cpp/core/utils/: DebugIntf.cpp  KAGParser.cpp  KAGParser.h  PadIntf.h
cpp/core/visual/: BitmapIntf.h  CharacterData.h  FreeType.cpp  FreeType.h  GraphicsLoadThread.cpp  GraphicsLoaderIntf.cpp  LayerManager.cpp  LoadJPEG.cpp  SaveTLG6.cpp  WindowIntf.cpp  tvpgl.cpp
cpp/plugins/: CMakeLists.txt  LayerExBase.h  getSample.cpp  m.cpp  scriptsEx.cpp  windowEx.cpp
cpp/plugins/motionplayer/: CMakeLists.txt  EmotePlayer.cpp  EmotePlayer.h  Player.h  ResourceManager.cpp  ResourceManager.h  SeparateLayerAdaptor.h  main.cpp
cpp/plugins/ncbind/: ncbind.cpp
gradle/wrapper/: gradle-wrapper.properties
ports/cocos2dx/: vcpkg.json
ports/ffmpeg/: usage  vcpkg-cmake-wrapper.cmake
src/core/: CMakeLists.txt
src/core/base/: PluginIntf.cpp  ScriptMgnIntf.cpp  SysInitIntf.cpp  SystemIntf.cpp  TextStream.cpp  ZIPArchive.cpp
src/core/environ/: Application.cpp  XP3ArchiveRepack.cpp
src/core/sound/: xmmlib.cpp
src/core/tjs2/: tjsConfig.cpp  tjsConfig.h  tjsDebug.cpp  tjsDebug.h  tjsHashSearch.h  tjsInterCodeExec.cpp  tjsObjectExtendable.h  tjsScriptBlock.cpp  tjsString.h
src/core/utils/: DebugIntf.cpp  FilePathUtil.h  KAGParser.cpp  MiscUtility.cpp
src/core/visual/: CharacterData.cpp  FreeTypeFace.h  FreeTypeFontRasterizer.cpp  LayerIntf.cpp  LoadBPG.cpp  LoadJXR.cpp  MenuItemIntf.cpp  MenuItemIntf.h
src/plugins/: CMakeLists.txt  LayerExBase.cpp
src/plugins/ncbind/: ncbind.hpp
ui/cocos-studio/locale/: en_us.xml  (+3 more)
(+71 files in other folders)
